--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -20,7 +20,7 @@ html {
 
             background-color: var(--main-color);
             #profile-container {
-                display: flex;
+                display: block;
                 position: absolute;
                 opacity: 0;
                 text-align: center;
@@ -29,27 +29,39 @@ html {
                 width: 200px;
             }
             #settings-container {
-                display: flex;
                 position: absolute;
+                bottom: 9px;
+                left: 0;
+                height: 50px;
+                backdrop-filter: blur(100px);
+                background: #f3f3f33a;
+                border: 1px solid var(--border-color);
+                border-left: none;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+                z-index: 3;
                 opacity: 0;
-                text-align: center;
-                top: 0;
-                left: 100px;
-                width: 100vw;
-                height: 100vh;
                 #settings-content {
-                    display: block;
                     list-style: none;
-                    width: 75px;
-                    text-align: center;
-                    background-color: rgba(173, 240, 182, 0.7);
-                    backdrop-filter: blur(100px);
-                    a:first-child {
-                        margin-top: 25px;
-                    }
-                    a {
-                        margin-bottom: 15px;
-                        display: block;
+                    li {
+                        display: inline-flex;
+                        position: relative;
+                        bottom: 10px;
+                        a {
+                            display: flex;
+                            margin-right: 5px;
+                            padding: 10px;
+                            border-radius: 5px;
+                            transition: .2s;
+                            &:hover {
+                                background-color: var(--nav-hyperlink);
+                                transition: .2s;
+                            }
+                            &:active {
+                                background-color: var(--nav-hyperlink-active);
+                                transition: .2s;
+                            }
+                        }
                     }
                 }
             }
