--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -40,7 +40,7 @@ html body main #settings-container {
   height: 50px;
   -webkit-backdrop-filter: blur(100px);
           backdrop-filter: blur(100px);
-  background: #f3f3f33a;
+  background: var(--background-color);
   border: 1px solid var(--border-color);
   border-left: none;
   border-top-right-radius: 10px;
