Added text for nav settings

--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -35,12 +35,11 @@ html body main #profile-container {
 }
 html body main #settings-container {
   position: absolute;
-  bottom: 9px;
+  bottom: 13px;
   left: 0;
   height: 50px;
   -webkit-backdrop-filter: blur(100px);
           backdrop-filter: blur(100px);
-  background: var(--background-color);
   border: 1px solid var(--border-color);
   border-left: none;
   border-top-right-radius: 10px;
@@ -77,6 +76,48 @@ html body main #settings-container #settings-content li a:active {
   background-color: var(--nav-hyperlink-active);
   -webkit-transition: 0.2s;
   transition: 0.2s;
+}
+html body main #settings-container #settings-content li #change-language #set-lang-text {
+  display: none;
+}
+html body main #settings-container #settings-content li #change-language:hover #set-lang-text {
+  display: block;
+}
+html body main #settings-container #settings-content li #notification #set-note-text {
+  display: none;
+}
+html body main #settings-container #settings-content li #notification:hover #set-note-text {
+  display: block;
+}
+html body main #settings-container #settings-content li #contact #set-cont-text {
+  display: none;
+}
+html body main #settings-container #settings-content li #contact:hover #set-cont-text {
+  display: block;
+}
+html body main #settings-container #settings-content li #developer #set-dev-text {
+  display: none;
+}
+html body main #settings-container #settings-content li #developer:hover #set-dev-text {
+  display: block;
+}
+html body main #settings-container #settings-content li #report-bug #set-bug-text {
+  display: none;
+}
+html body main #settings-container #settings-content li #report-bug:hover #set-bug-text {
+  display: block;
+}
+html body main #settings-container #settings-content li #about #set-abo-text {
+  display: none;
+}
+html body main #settings-container #settings-content li #about:hover #set-abo-text {
+  display: block;
+}
+html body main #settings-container #settings-content li #more-settings #set-more-text {
+  display: none;
+}
+html body main #settings-container #settings-content li #more-settings:hover #set-more-text {
+  display: block;
 }
 html body main form {
   width: 550px;
