--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -20,13 +20,92 @@ html {
 
             background-color: var(--main-color);
             #profile-container {
-                display: block;
                 position: absolute;
+                top: 15px;
+                left: 0;
+                width: 201px;
+                height: 170px;
+                backdrop-filter: blur(100px);
+                border: 1px solid var(--border-color);
+                border-left: none;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+                z-index: 3;
                 opacity: 0;
-                text-align: center;
-                top: 50px;
-                left: 320px;
-                width: 200px;
+                #profile-content {
+                    list-style: none;
+                    li {
+                        display: inline-flex;
+                        position: relative;
+                        bottom: 11px;
+                        a {
+                            display: flex;
+                            margin-right: 5px;
+                            padding: 10px;
+                            border-radius: 5px;
+                            transition: .2s;
+                            &:hover {
+                                background-color: var(--nav-hyperlink);
+                                transition: .2s;
+                            }
+                            &:active {
+                                background-color: var(--nav-hyperlink-active);
+                                transition: .2s;
+                            }
+                        }
+                        p {
+                            position: relative;
+                            bottom: -18px;
+                            left: 10px;
+                            margin-top: -20px;
+                            margin-right: 10px;
+                        }                        
+                    }
+                }
+            }
+            #help-container {
+                position: absolute;
+                top: 77px;
+                left: 0;
+                width: 201px;
+                height: 130px;
+                backdrop-filter: blur(100px);
+                border: 1px solid var(--border-color);
+                border-left: none;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+                z-index: 3;
+                opacity: 0;
+                #help-content {
+                    list-style: none;
+                    li {
+                        display: inline-flex;
+                        position: relative;
+                        bottom: 11px;
+                        a {
+                            display: flex;
+                            margin-right: 5px;
+                            padding: 10px;
+                            border-radius: 5px;
+                            transition: .2s;
+                            &:hover {
+                                background-color: var(--nav-hyperlink);
+                                transition: .2s;
+                            }
+                            &:active {
+                                background-color: var(--nav-hyperlink-active);
+                                transition: .2s;
+                            }
+                        }
+                        p {
+                            position: relative;
+                            bottom: -18px;
+                            left: 10px;
+                            margin-top: -20px;
+                            margin-right: 10px;
+                        }                        
+                    }
+                }
             }
             #settings-container {
                 position: absolute;
@@ -45,7 +124,7 @@ html {
                     li {
                         display: inline-flex;
                         position: relative;
-                        bottom: 10px;
+                        bottom: 11px;
                         a {
                             display: flex;
                             margin-right: 5px;
@@ -82,10 +161,10 @@ html {
                             display: block;
                         }
                         
-                        #contact #set-cont-text {
+                        #comment-settings #set-comm-text {
                             display: none;
                         }
-                        #contact:hover #set-cont-text {
+                        #comment-settings:hover #set-comm-text {
                             display: block;
                         }
                         
@@ -93,20 +172,6 @@ html {
                             display: none;
                         }
                         #developer:hover #set-dev-text {
-                            display: block;
-                        }
-                        
-                        #report-bug #set-bug-text {
-                            display: none;
-                        }
-                        #report-bug:hover #set-bug-text {
-                            display: block;
-                        }
-                        
-                        #about #set-abo-text {
-                            display: none;
-                        }
-                        #about:hover #set-abo-text {
                             display: block;
                         }
                         
