--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -274,6 +274,16 @@ html body nav #side-bar footer .settings img {
   margin-top: 5px;
   margin-left: -1px;
 }
+html body nav #side-bar footer .settings #updateInfo {
+  display: none;
+  position: relative;
+  top: 22px;
+  left: -3px;
+  width: 7px;
+  height: 7px;
+  border-radius: 5px;
+  background-color: var(--bg-main-button);
+}
 html body nav #side-bar footer .settings p {
   margin-top: 5px;
   left: 0;
