--- a/REWORK/src/stylesheet/main/main/main.scss
+++ b/REWORK/src/stylesheet/main/main/main.scss
@@ -184,6 +184,9 @@ html body {
                 img {
                     margin-left: -3px;
                 }
+                #settingsIcon {
+                    margin-left: -4px;
+                }
             }
             a {
                 display: flex;
