--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -103,6 +103,12 @@ html {
                             left: 10px;
                             margin-top: -20px;
                             margin-right: 10px;
+                        }
+                        #help-page #open-external {
+                            position: relative;
+                            top: 3px;
+                            left: 52px;
+                            margin-right: 52px;
                         }                        
                     }
                 }
