--- a/REWORK/src/stylesheet/main/main/main.scss
+++ b/REWORK/src/stylesheet/main/main/main.scss
@@ -100,6 +100,11 @@ html body {
         margin-left: 3px;
         cursor: pointer;
     }
+    .openExternal {
+        width: 13px;
+        height: 13px;
+        opacity: .65;
+    }
     .hidden {
         display: none;
     }
