--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -133,6 +133,11 @@ html body .info {
   margin-left: 3px;
   cursor: pointer;
 }
+html body .openExternal {
+  width: 13px;
+  height: 13px;
+  opacity: 0.65;
+}
 html body .hidden {
   display: none;
 }
