--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -23,13 +23,13 @@ html {
                 position: absolute;
                 top: 15px;
                 left: 0;
-                width: 201px;
-                height: 170px;
+                width: 210px;
                 backdrop-filter: blur(100px);
                 border: 1px solid var(--border-color);
                 border-left: none;
                 border-top-right-radius: 10px;
                 border-bottom-right-radius: 10px;
+                overflow: hidden;
                 z-index: 5;
                 display: none;
                 #profile-content {
@@ -37,7 +37,6 @@ html {
                     li {
                         display: inline-flex;
                         position: relative;
-                        bottom: 11px;
                         a {
                             display: flex;
                             margin-right: 5px;
@@ -65,10 +64,10 @@ html {
             }
             #help-container {
                 position: absolute;
-                top: 77px;
+                top: 67px;
                 left: 0;
-                width: 201px;
-                height: 130px;
+                width: 205px;
+                height: 148px;
                 backdrop-filter: blur(100px);
                 border: 1px solid var(--border-color);
                 border-left: none;
@@ -81,7 +80,6 @@ html {
                     li {
                         display: inline-flex;
                         position: relative;
-                        bottom: 11px;
                         a {
                             display: flex;
                             margin-right: 5px;
